<resources>
    <!-- general -->
    <string name="app_name">Civitas</string>

    <!-- registration and login fragment -->
    <string name="tab_title_login">Login</string>
    <string name="tab_title_register">Register</string>
    <string name="tab_title_about">About</string>
    <string name="name">Name</string>
    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="type">Typ</string>
    <string name="password">Password</string>
    <string name="email">E-Mail</string>
    <string name="title_activity_maps">Karte</string>
    <string name="civitas_main_logo">Civitas main logo</string>
    <string name="civitas_about_logo">Civitas about logo</string>

    <!-- map fragment -->
    <string name="filter">Filter</string>
    <string name="time_period">Zeitperiode</string>

    <!-- navigation drawer -->
    <string name="map">Karte</string>
    <string name="my_artefacts">Meine Artefakte</string>
    <string name="bookmarks">Favoriten</string>

    <string name="nav_drawer_item_account">Konto</string>
    <string name="nav_drawer_item_settings">Einstellungen</string>
    <string name="nav_drawer_item_help_and_feedback">Hilfe</string>
    <string name="nav_drawer_item_about">Impressum</string>

    <string name="nav_open">open</string>
    <string name="nav_close">close</string>

    <!-- Account Fragment -->
    <string name="button_log_out">Ausloggen</string>
    <string name="text_logged_in_as">Sie sind eingeloggt als:</string>
    <string name="text_default_not_logged_in">Sie sind nicht eingeloggt</string>

    <!-- artefact detail activity-->
    <string name="button_next_item">Nach.</string>
    <string name="button_edit_current">Bearbeiten</string>
    <string name="button_previous_item">Vorh.</string>
    <string name="button_delete_current">Delete</string>

    <!-- undefined -->
    <string name="signed_in_fmt">Signed in</string>

    <!-- categories -->
    <string name="category_basilika">Basilika</string>
    <string name="category_bogen">Bogen</string>
    <string name="category_christentum">Christentum</string>
    <string name="category_grab">Grabstätte</string>
    <string name="category_gmythos">Gründungsmythos</string>
    <string name="category_infra">Infrastruktur</string>
    <string name="category_kult">Kultstätte</string>
    <string name="category_platz">Platzanlage</string>
    <string name="category_politik_inst">Politische Institution</string>
    <string name="category_spiel">Spielstätte</string>
    <string name="category_therme">Therme</string>
    <string name="category_wohnkomplex">Wohnkomplex</string>
    <string name="category_default">unbekannt</string>


    <string-array name="categories">
        <item>Alle</item>
        <item>Basilika</item>
        <item>Bogen</item>
        <item>Christentum</item>
        <item>Grabstätte</item>
        <item>Gründungsmythos</item>
        <item>Infrastruktur</item>
        <item>Kultstätte</item>
        <item>Platzanlage</item>
        <item>Politische Institution</item>
        <item>Spielstätte</item>
        <item>Therme</item>
        <item>Wohnkomplex</item>
    </string-array>

    <string-array name="time_periods">
        <item>Alle</item>
        <item>1. Hälfte 8. Jh. v. Chr.</item>
        <item>2. Hälfte 8. Jh. v. Chr.</item>
        <item>1. Hälfte 7. Jh. v. Chr.</item>
        <item>2. Hälfte 7. Jh. v. Chr.</item>
        <item>1. Hälfte 6. Jh. v. Chr.</item>
        <item>2. Hälfte 6. Jh. v. Chr.</item>
        <item>1. Hälfte 5. Jh. v. Chr.</item>
        <item>2. Hälfte 5. Jh. v. Chr.</item>
        <item>1. Hälfte 4. Jh. v. Chr.</item>
        <item>2. Hälfte 4. Jh. v. Chr.</item>
        <item>1. Hälfte 3. Jh. v. Chr.</item>
        <item>2. Hälfte 3. Jh. v. Chr.</item>
        <item>1. Hälfte 2. Jh. v. Chr.</item>
        <item>2. Hälfte 2. Jh. v. Chr.</item>
        <item>1. Hälfte 1. Jh. v. Chr.</item>
        <item>2. Hälfte 1. Jh. v. Chr.</item>
        <item>1. Hälfte 1. Jh. n. Chr.</item>
        <item>2. Hälfte 1. Jh. n. Chr.</item>
        <item>1. Hälfte 2. Jh. n. Chr.</item>
        <item>2. Hälfte 2. Jh. n. Chr.</item>
        <item>1. Hälfte 3. Jh. n. Chr.</item>
        <item>2. Hälfte 3. Jh. n. Chr.</item>
        <item>1. Hälfte 4. Jh. n. Chr.</item>
        <item>2. Hälfte 4. Jh. n. Chr.</item>
    </string-array>


    <!-- Add Artefact-->
    <!-- Tab Titles-->
    <string name="tab_title_first_step">Erster Schritt \n Allgemeines</string>
    <string name="tab_title_second_step">Zweiter Schritt \n Elemente</string>
    <!-- Tab content-->
    <string name="create_artefact">Neues Artefakt</string>
    <string name="add_picture">Bild hinzufügen</string>
    <string name="artefact_name">Artefaktname</string>
    <string name="category">Kategorie</string>
    <string name="date">Zeitperiode</string>
    <string name="description">Beschreibung</string>
    <string name="finish">Fertig</string>
    <!-- add artefact element-->
    <string name="button_submit_artefact_element">Bestätigen</string>
    <string name="button_start_audio_recording">Audio Aufnehmen (optional)</string>
    <string name="text_add_image">Bild hinzufügen</string>

    <!--<string name="server_client_id">942217812977-di2vc9l8qca5mff30jfvirl3v1qn2nkg.apps.googleusercontent.com</string>-->
    <string name="server_client_id">897174090854-jpniasmf6rmh9i0ss0572bsg6ifp78vk.apps.googleusercontent.com</string>
    <string name="text_audio_info">Audio-Datei:</string>
    <string name="add_artefact_item">Erstelle ein Artefakt-Element</string>
    <string name="text_info_add_artefact_entry">Erstellen Sie in diesem Bildschirm neue Artefakt-Elemente</string>
    <string name="button_stop_audio_recording">Aufnahme stoppen</string>
    <string name="text_author_info">Autor:</string>
    <string name="text_license_info">Lizenz:</string>
    <string name="remove_artefact_item">Remove</string>
    <string name="button_register">Registrieren</string>
    <string name="button_login">Einloggen</string>
    <string name="button_login_as_guest">Als Gast einloggen</string>
    <string name="toast_fill_out_form">Bitte füllen Sie alle Felder aus</string>
    <string name="toast_logged_in">erfolgreich eingeloggt</string>
    <string name="toast_login_error">login fehlgeschlagen</string>
    <string name="toast_registered">erfolgreich registriert</string>
    <string name="toast_register_conflict">Die angegebene Email ist bereits registriert</string>
    <string name="toast_register_error">Registrierung fehlgeschlagen</string>
    <string name="toast_network_error">Überprüfen Sie Ihre Internetverbindung</string>
    <string name="introduction">Einführung: Stadtgeschichte</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_drawer_item_logout">Ausloggen</string>
    <string name="text_no_license">no lince link</string>

    <!-- Progressbar dialog -->
    <string name="progress_artefact_upload_title">Serverkommunikation</string>
    <string name="progress_artefact_upload_message">Ihr Artefakt wird an den Server übermittelt</string>
    <string name="validation_artefact_incomplete">Nicht alle Artefaktinformationen sind ausgefüllt</string>
    <string name="validation_artefact_item_incomplete">Bitte geben Sie mindestens ein Bild, die License und eine Beschreibung ein.</string>

    <!-- Impressum -->
    <string name="text_impressum_title">Impressum</string>
    <string name="text_impressum_title_technical_development">Technische Umsetzung</string>
    <string name="text_impressum_content_responsibility">Rechtsform und gesetzliche Vertretung:\nDie Universität
        Hamburg ist eine Körperschaft\ndes Öffentlichen Rechts. Sie wird gesetzlich\nvertreten durch Prof. Dr. Dieter
        Lenzen,\nPräsident der Universität Hamburg,\nEdmund-Siemers-Allee 1, D-20146 Hamburg\n\nZuständige
        Aufsichtsbehörde:\nBehörde für Wissenschaft und Forschung der\nFreien und Hansestadt Hamburg\nHamburger
        Straße 37, D-22083 Hamburg\n\nInhaltlich Verantwortliche:\nPD Dr. Sabine Panzram\nUniversität
        Hamburg\nHistorisches Seminar - Arbeitsbereich Alte Geschichte\nVon-Melle-Park 6/VIII\nD-20146 Hamburg\nSabine.Panzram@uni-hamburg.de\n\nunter Mitarbeit von Florian Sittig und Benjamin Wolter. Gefördert mit Mitteln der Hamburg Open Online University (HOOU).\n
</string>
    <string name="text_impressum_text_technical_development">Die App \"Civitas\" wurde von Studierenden und Mitarbeitern der Universität Hamburg im Rahmen des Lehrprojekts M-Lab umgesetzt.\n\nTechnische Umsetzung: \nGlenn Bickel \nVolodymyr Biryuk \nChristoph Corleis \nJonathan Stemmildt \nLiisa Vaht \nAmina Voloder \n\nUnter Leitung von: \nProf. Walid Maalej \nChristoph Stanik</string>
    <string name="action_localization">action_localization</string>
    <string name="localize">Localize</string>
    <string name="read_mode">Read Mode</string>
</resources>
