<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_impressum_title"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_impressum_content_responsibility"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_impressum_title_technical_development"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_impressum_text_technical_development"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="20dp"/>
    </LinearLayout>
</ScrollView>