<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_artefact_detail"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/artefact_image"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:scaleType="centerInside"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_artefact_detail"
        app:srcCompat="@color/cardview_light_background"/>

    <LinearLayout
        android:id="@+id/holder_added_audio"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:background="@drawable/card_background_no_shadow"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artefact_image"
        app:layout_constraintBottom_toTopOf="@+id/description"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_audio_info"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"/>
        <ImageButton
            android:id="@+id/button_stop_audio"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_stop_black_24px" />
        <ImageButton
            android:id="@+id/button_play_audio"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_play_arrow_black_24px" />
    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:scrollbars = "vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        android:paddingTop="8dp"
        android:background="@drawable/card_background_no_shadow"
        app:layout_constraintTop_toBottomOf="@+id/holder_added_audio"
        app:layout_constraintBottom_toTopOf="@+id/holder_next_prev_item"
        app:layout_constraintHorizontal_bias="0.0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="4dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/holder_next_prev_item">

        <Button
            android:id="@+id/button_previous"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_previous_item" />

        <ImageButton
            android:id="@+id/button_delete_artefact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_delete_current"
            android:src="@drawable/ic_delete_black_24px" />

        <ImageButton
            android:id="@+id/button_edit_artefact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_edit_current"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_edit_black" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_next_item"
            android:backgroundTint="@color/colorPrimary"
            android:layout_weight="1" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>