<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">
    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <!-- The main content view -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar_main"
                layout="@layout/toolbar"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_below="@+id/toolbar_main"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="87dp"
                android:layout_marginTop="185dp"
                android:id="@+id/email"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:ems="10"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:id="@+id/password" />
            <Button
                android:text="@string/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:id="@+id/register"
                android:layout_below="@+id/password"
                android:layout_alignStart="@+id/email" />
            <Button
                android:text="@string/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/register"
                android:layout_alignEnd="@+id/email"
                android:id="@+id/login" />
            <Button
                android:text="@string/button_login_as_guest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register"
                android:layout_alignStart="@+id/password"
                android:layout_marginTop="26dp"
                android:id="@+id/guestButton"
                android:layout_alignEnd="@+id/login" />
        </RelativeLayout>
        <!-- The navigation drawer -->
        <android.support.design.widget.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:maxWidth="280dp"
            app:elevation="16dp"
            app:menu="@menu/drawer"/>
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>