<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/editTextArtefactName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:background="@drawable/card_background_no_shadow"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:hint="@string/artefact_name" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/card_background_no_shadow"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/category" />
            <Spinner
                android:id="@+id/fragment_add_spinner_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="8dp"
                android:entries="@array/categories"
                android:prompt="@string/category"
                android:spinnerMode="dialog" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/holder_time_period"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/card_background_no_shadow">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:text="@string/time_period"/>
            <Spinner
                android:id="@+id/spinnerTimePeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:spinnerMode="dialog"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:entries="@array/time_periods"
                android:prompt="@string/time_period"/>
        </RelativeLayout>
    </LinearLayout>

    <com.google.android.gms.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:context="eu.mlab.civitas.android.addartefact.AddArtefactActivity" />

</LinearLayout>